
1.20 - November 7th, 2006
       - Value for $XML::RSS::modules gets destroyed (RT#18755, Shlomi)
         - Note that YOU CAN NO LONGER USE $XML::RSS::modules, you
           have to use the add_modules call as documented!
       - encode generates warnings for undefined text (RT#13523, Mark Stosberg)
       - Missing last build date value in RSS 2.0 (RT#19417)
       - RSS 2.0 spec allows omission of title from entry (RT#18817,
         test from Shlomi)
       - Can't create "0" values in optional items (RT#11415, based on
         patch from Shlomi - thanks!)
       - Remove the executable bit from Makefile.PL
       - Add test to test regression of CPAN RT#5438 (Shlomi)

1.12 - October 25, 2006
       - Add more tests
       - make sure META.yml is correctly generated
       - Fix enclosure parsing (RT#7920, Tatsuhiko Miyagawa)
       - Incorrect entity encoding in XML output (RT#22467, reported by Stephen Hall)

1.11 - October 19, 2006
       - use HTML::Entities instead of the "homegrown" entity encoding code
       - Minor doc fix (David Steinbrunner)
       - Fix encoding of the > char, added tests (RT#19420, Shlomi Fish)
       - XML::RSS ignores output encoding (RT#11124, RT#7343, test
         failures on win32, Vaclav Haisman, Steve Peters)
       - encoding of source element (RT#2285)
       - use base instead of @ISA
       - Thanks to Shlomi Fish for helping sorting through the RT queue!

1.10 - March 11, 2006
       - Module (for now) maintained by Ask Bjoern Hansen
       - Fixed category output in RSS 2.0 (RT#17303, Yasuhiro Onishi)
       - Update documentation with new Subversion server and bug tracking
       - Clean up distribution (tests, Makefile.PL, file locations, ...)

1.05 - Thu Aug 12 20:54:31 2004
       - fixed version number
       - improved RSS 2.0 generation support
       - typo and documentation fixes
    
1.04 - Web Mar 03 20:49:43 2004
       - update Changes to include changes for 1.03
       